added some extra views

--- a/src/djangofscratch/templates/current_datetime.html
+++ b/src/djangofscratch/templates/current_datetime.html
@@ -1,8 +1,7 @@
 <html>
-    <head>
-        <title>View current datetime</title>
-    </head>
+    {% include 'head.html' %}
     <body>
-        Date is {{now}} plus {{add}} is {{now_add}} 
+        Date is {{now}} plus {{add}} days is {{now_added}} 
+        {% include 'footer.html' %}
     </body>
 </hmtl>
