updated Landing page and urls

--- a/src/djangofscratch/templates/base.html
+++ b/src/djangofscratch/templates/base.html
@@ -17,13 +17,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="{% url 'hello' %}">Home</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Home</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'time' %}">time</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'time' %}">Disabled</a>
+                <a class="nav-link" href="{% url 'books' %}">Books</a>
             </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
